--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,7 +18,7 @@
 </div>
 <div class="container">
   <div class="row" id="total">
-    <div class="col-sm-3" id="item{{j}}"> <h2> Total: {{total | currency:'GBP':'symbol-narrow':'1.2-2'}}</h2> </div>
-    <div class="col-sm-3" id="item{{j}}"><button type="button" class="btn btn-dark">Checkout</button></div>
+    <div class="col-sm-3" id="price"> <h2> Total: {{total | currency:'GBP':'symbol-narrow':'1.2-2'}}</h2> </div>
+    <div class="col-sm-3" id="button"><button type="button" class="btn btn-dark">Checkout</button></div>
   </div>
 </div>
